# IS2A

./: .gitignore  CMakeLists.txt  README.md  houselder_carre_64.txt  package.json
EDT/: .env  .gitignore  README.md  multi_user_sync.py  requirements.txt  script.py
S5/algo/TP1/: test.c
S5/algo/TP2/: exercice0.c  exercice1.c  exercice2.c  exercice3.c  exercice4.c
S5/algo/TP3/: exercice.c
S5/algo/TP4/: exercice.c
S5/algo/TP5/: exercice1.c  exercice2.c  exercice3.c  exercice4.c
S5/algo/TP6/: exercice.c
S5/algo/TP7/: exercice1.c  exercice2.c
S5/algo/TP8/: data_annuaire.txt  exercice.c  res_annuaire.txt
S5/algo/annal/: data.txt  exercice.c
S5/bdd/TP2/: commandes.sql
S5/bdd/TP3/: exercice.sql  resultatsVideoclub.txt  videoclub.sql
S5/bdd/TP4/: index.css  index.php  output.css  package.json  tailwind.config.js  utils.php
S5/bdd/annalTP/: annal1.sql  bieres.sql
S5/bdd/tp1/: GaleriePeinture.uml  GaleriePeinture.xmi
S5/logStat/: communes.csv  cours.md  eleve.RData  firstScript.r  immeubles.csv
S5/logStat/DS/: data.RData  exercice1.r  exercice3.py  liste.RData
S5/logStat/TP1/: mystere.R  (+3 more)
S5/progNum/: README.md
S6/ALN/: compte_rendu.md
S6/proba3/: tp1.R  tp2.R
S7/BigData/: cumulative_data.csv  display_data.py  filtered.tsv  filtered_hard.tsv  format_data.py  generate_analysis.py  load_data.py  main.py  matrix_initial.csv  number_of_iterations_by_beta.csv  pageRank.py  report.md
S8/VirtualEnv/08_miniTP_pyproject/: README.md  pyproject.toml  reponses.md
S8/prog_concu/: exo2.c  exo2.md
script/: start.c.sh  start.php.sh  start.python.sh
(+1745 files in other folders)
