[project]
name = "notre-projet"
version = "2.8.2"
description = "Parce que c'est notre projet !"
authors = [
    {name = "Emmanuel Macron",
    email = "macron@france.fr"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy==1.26.4",
    "pandas>=2.2.0",
    "matplotlib",
    "scikit-learn~=1.5.0",
    "requests<3.0",
]
